--- a/index.html
+++ b/index.html
@@ -18,8 +18,24 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
 
+
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="Ravi Lakhtariya" name="author">
+  <meta content="RvStudio by Ravi Lakhtariya - Professional photography services specializing in pre-wedding, product shoots, candid photography, and travel photography."
+        name="description">
+  <meta content="RvStudio, Ravi Lakhtariya, photography, pre-wedding photography, candid photoshoot, product photography, travel photographer, model portfolio, photoshoots, wedding photographer, Rajkot photographer"
+        name="keywords">
+  <meta content="index, follow" name="robots">
+
+  <meta content="RvStudio - Professional Photography by Ravi Lakhtariya" property="og:title">
+  <meta content="Explore professional photography services by Ravi Lakhtariya at RvStudio. Specializing in pre-wedding, product shoots, travel photography, and more."
+        property="og:description">
+  <meta content="https://gunatitsolutions.github.io/Rvstudio/assets/AppIcon.png"
+        property="og:image">
+  <meta content="https://gunatitsolutions.github.io/Rvstudio/" property="og:url">
+  <meta content="website" property="og:type">
+  <meta charset="UTF-8">
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -29,10 +45,24 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>rvstudioin</title>
+  <title>RvStudio | Professional Photography Services in Rajkot</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "RvStudio",
+      "url": "https://gunatitsolutions.github.io/Rvstudio/",
+      "logo": "https://gunatitsolutions.github.io/Rvstudio/assets/AppIcon.png",
+      "description": "Professional photography services by Ravi Lakhtariya specializing in pre-wedding shoots, product photography, and travel photography.",
+      "sameAs": [
+        "https://www.instagram.com/ravi.lakhtariya"
+      ]
+    }
+  </script>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+
 </body>
 </html>
