--- a/index.html
+++ b/index.html
@@ -1,103 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <!--
-      If you are serving your web app in a path other than the root, change the
-      href value below to reflect the base path you are serving from.
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
 
-      The path provided below has to start and end with a slash "/" in order for
-      it to work correctly.
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
 
-      For more details:
-      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-      This is a placeholder for base href that will be replaced by the value of
-      the `--base-href` argument provided to `flutter build`.
-    -->
-    <base href="/Rvstudio/"/>
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+    <base href="/Rvstudio/">
 
-    <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Photography service">
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
 
 
-    <!-- iOS meta tags & icons -->
-    <meta content="yes" name="apple-mobile-web-app-capable">
-    <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <meta content="RvStudio" name="apple-mobile-web-app-title">
-    <link href="icons/Icon-192.png" rel="apple-touch-icon">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="Ravi Lakhtariya" name="author">
+  <meta content="RvStudio by Ravi Lakhtariya - Professional photography services specializing in pre-wedding, product shoots, candid photography, and travel photography."
+        name="description">
+  <meta content="RvStudio, Ravi Lakhtariya, photography, pre-wedding photography, candid photoshoot, product photography, travel photographer, model portfolio, photoshoots, wedding photographer, Rajkot photographer"
+        name="keywords">
+  <meta content="index, follow" name="robots">
 
-    <!-- Favicon -->
-    <link href="favicon.png" rel="icon" type="image/png"/>
+  <meta content="RvStudio - Professional Photography by Ravi Lakhtariya" property="og:title">
+  <meta content="Explore professional photography services by Ravi Lakhtariya at RvStudio. Specializing in pre-wedding, product shoots, travel photography, and more."
+        property="og:description">
+  <meta content="https://gunatitsolutions.github.io/Rvstudio/assets/AppIcon.png"
+        property="og:image">
+  <meta content="https://gunatitsolutions.github.io/Rvstudio/" property="og:url">
+  <meta content="website" property="og:type">
+  <meta charset="UTF-8">
+  <!-- iOS meta tags & icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta content="RvStudio" name="apple-mobile-web-app-title">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-    <title>RvStudio</title>
-    <link href="manifest.json" rel="manifest">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>RvStudio | Professional Photography Services in Rajkot</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "RvStudio",
+      "url": "https://gunatitsolutions.github.io/Rvstudio/",
+      "logo": "https://gunatitsolutions.github.io/Rvstudio/assets/AppIcon.png",
+      "description": "Professional photography services by Ravi Lakhtariya specializing in pre-wedding shoots, product photography, and travel photography.",
+      "sameAs": [
+        "https://www.instagram.com/ravi.lakhtariya"
+      ]
+    }
+  </script>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-<script async src="flutter_bootstrap.js"></script>
-<script>
-    const serviceWorkerVersion = "517223435";
-    var scriptLoaded = false;
-    function loadMainDartJs() {
-      if (scriptLoaded) {
-        return;
-      }
-      scriptLoaded = true;
-      var scriptTag = document.createElement('script');
-      scriptTag.src = 'main.dart.js';
-      scriptTag.type = 'application/javascript';
-      document.body.append(scriptTag);
-    }
+  <script src="flutter_bootstrap.js" async></script>
 
-    if ('serviceWorker' in navigator) {
-      // Service workers are supported. Use them.
-      window.addEventListener('load', function () {
-        // Wait for registration to finish before dropping the <script> tag.
-        // Otherwise, the browser will load the script multiple times,
-        // potentially different versions.
-        var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
-        navigator.serviceWorker.register(serviceWorkerUrl)
-          .then((reg) => {
-            function waitForActivation(serviceWorker) {
-              serviceWorker.addEventListener('statechange', () => {
-                if (serviceWorker.state == 'activated') {
-                  console.log('Installed new service worker.');
-                  loadMainDartJs();
-                }
-              });
-            }
-            if (!reg.active && (reg.installing || reg.waiting)) {
-              // No active web worker and we have installed or are installing
-              // one for the first time. Simply wait for it to activate.
-              waitForActivation(reg.installing ?? reg.waiting);
-            } else if (!reg.active.scriptURL.endsWith(serviceWorkerVersion)) {
-              // When the app updates the serviceWorkerVersion changes, so we
-              // need to ask the service worker to update.
-              console.log('New service worker available.');
-              reg.update();
-              waitForActivation(reg.installing);
-            } else {
-              // Existing service worker is still good.
-              console.log('Loading app from service worker.');
-              loadMainDartJs();
-            }
-          });
-
-        // If service worker doesn't succeed in a reasonable amount of time,
-        // fallback to plaint <script> tag.
-        setTimeout(() => {
-          if (!scriptLoaded) {
-            console.warn(
-              'Failed to load app from service worker. Falling back to plain <script> tag.',
-            );
-            loadMainDartJs();
-          }
-        }, 4000);
-      });
-    } else {
-      // Service workers not supported. Just drop the <script> tag.
-      loadMainDartJs();
-    }
-</script>
 </body>
 </html>
