--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/RVStudio/">
+  <base href="/RvStudio/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,13 +24,14 @@
 
   <meta property="og:title" content="RV Studio – Freelance Photographer in Rajkot">
   <meta property="og:description" content="Specializing in prewedding, portraits, model shoots, and product photography. Capture your memories with RV Studio in Rajkot.">
-  <meta property="og:url" content="https://<username>.github.io/RvStudioin/">
+  <meta property="og:url" content="https://gunatitsolutions.github.io/RvStudio/">
   <meta property="og:type" content="website">
+
 
   <!-- iOS meta tags & icons -->
   <meta content="yes" name="mobile-web-app-capable">
   <meta content="black" name="apple-mobile-web-app-status-bar-style">
-  <meta content="rvstudioin" name="apple-mobile-web-app-title">
+  <meta content="RvStudio" name="apple-mobile-web-app-title">
   <link href="icons/Icon-192.png" rel="apple-touch-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
