--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/RvStudio/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -44,35 +44,5 @@
 </head>
 <body>
 <script async src="flutter_bootstrap.js"></script>
-<script>
-  let deferredPrompt;
-
-  window.addEventListener('beforeinstallprompt', (e) => {
-    deferredPrompt = e;
-  });
-
-  function promptInstall(){
-     deferredPrompt.prompt();
-  }
-
-  // Listen for app install event
-  window.addEventListener('appinstalled', () => {
-    deferredPrompt = null;
-    appInstalled();
-  });
-
-  // Track how PWA was launched (either from browser or as PWA)
-  function getLaunchMode() {
-    const isStandalone = window.matchMedia('(display-mode: standalone)').matches;
-    if(deferredPrompt) hasPrompt();
-    if (document.referrer.startsWith('android-app://')) {
-      appLaunchedAsTWA();
-    } else if (navigator.standalone || isStandalone) {
-      appLaunchedAsPWA();
-    } else {
-      window.appLaunchedInBrowser();
-    }
-  }
-</script>
 </body>
 </html>
