--- a/index.html
+++ b/index.html
@@ -18,29 +18,21 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <title>RV Studio | Freelance Photographer in Rajkot – Prewedding, Portrait, Model & Product Photography</title>
-  <meta name="description" content="RV Studio – Freelance photographer in Rajkot specializing in prewedding photography, portraits, model shoots, and product photography. Professional and creative photography services to capture your special moments.">
-  <meta name="keywords" content="RV Studio Rajkot, RV Studio photography, freelance photographer Rajkot, prewedding photography Rajkot, portrait photography Rajkot, model shoot Rajkot, product photography Rajkot, wedding photographer Rajkot, candid photography Rajkot, professional photographer Rajkot">
-
-  <meta property="og:title" content="RV Studio – Freelance Photographer in Rajkot">
-  <meta property="og:description" content="Specializing in prewedding, portraits, model shoots, and product photography. Capture your memories with RV Studio in Rajkot.">
-
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
-  <meta content="yes" name="mobile-web-app-capable">
-  <meta content="black" name="apple-mobile-web-app-status-bar-style">
-  <meta content="RvStudio" name="apple-mobile-web-app-title">
-  <link href="icons/Icon-192.png" rel="apple-touch-icon">
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="rvstudioin">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link href="favicon.png" rel="icon" type="image/png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>rvstudioin</title>
-  <link href="manifest.json" rel="manifest">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-<script async src="flutter_bootstrap.js"></script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
