--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta content="A new Flutter project." name="description">
 
   <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="rvstudioin">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta content="yes" name="mobile-web-app-capable">
+  <meta content="black" name="apple-mobile-web-app-status-bar-style">
+  <meta content="rvstudioin" name="apple-mobile-web-app-title">
+  <link href="icons/Icon-192.png" rel="apple-touch-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link href="favicon.png" rel="icon" type="image/png"/>
 
   <title>rvstudioin</title>
-  <link rel="manifest" href="manifest.json">
+  <link href="manifest.json" rel="manifest">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<script async src="flutter_bootstrap.js"></script>
 </body>
 </html>
