pwa extra package removed

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/RvStudio/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta content="A new Flutter project." name="description">
+  <meta name="description" content="RV Studio – Freelance photographer in Rajkot specializing in prewedding photography, portraits, model shoots, and product photography.">
+
+  <meta property="og:title" content="RV Studio – Freelance Photographer">
+  <meta property="og:description" content="Professional and creative photography services to capture your special moments.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gunatitsolutions.github.io/RvStudio/">
+  <meta property="og:image" content="icons/icon-512.png">
 
   <!-- iOS meta tags & icons -->
   <meta content="yes" name="mobile-web-app-capable">
@@ -31,7 +37,7 @@
   <!-- Favicon -->
   <link href="favicon.png" rel="icon" type="image/png"/>
 
-  <title>rvstudioin</title>
+  <title>RV Studio</title>
   <link href="manifest.json" rel="manifest">
 </head>
 <body>
