--- a/index.html
+++ b/index.html
@@ -14,17 +14,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/RvStudio/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="RV Studio – Freelance photographer in Rajkot specializing in prewedding photography, portraits, model shoots, and product photography.">
-
-  <meta property="og:title" content="RV Studio – Freelance Photographer">
-  <meta property="og:description" content="Professional and creative photography services to capture your special moments.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gunatitsolutions.github.io/RvStudio/">
-  <meta property="og:image" content="icons/icon-512.png">
+  <meta content="A new Flutter project." name="description">
 
   <!-- iOS meta tags & icons -->
   <meta content="yes" name="mobile-web-app-capable">
@@ -37,40 +31,10 @@
   <!-- Favicon -->
   <link href="favicon.png" rel="icon" type="image/png"/>
 
-  <title>RV Studio</title>
+  <title>rvstudioin</title>
   <link href="manifest.json" rel="manifest">
 </head>
 <body>
 <script async src="flutter_bootstrap.js"></script>
-<script>
-  let deferredPrompt;
-
-  window.addEventListener('beforeinstallprompt', (e) => {
-    deferredPrompt = e;
-  });
-
-  function promptInstall(){
-     deferredPrompt.prompt();
-  }
-
-  // Listen for app install event
-  window.addEventListener('appinstalled', () => {
-    deferredPrompt = null;
-    appInstalled();
-  });
-
-  // Track how PWA was launched (either from browser or as PWA)
-  function getLaunchMode() {
-    const isStandalone = window.matchMedia('(display-mode: standalone)').matches;
-    if(deferredPrompt) hasPrompt();
-    if (document.referrer.startsWith('android-app://')) {
-      appLaunchedAsTWA();
-    } else if (navigator.standalone || isStandalone) {
-      appLaunchedAsPWA();
-    } else {
-      window.appLaunchedInBrowser();
-    }
-  }
-</script>
 </body>
 </html>
