dev code pushed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -37,7 +37,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://gunatitsolutions.github.io/RvStudio/">
 
-  <title>rvstudioin</title>
+  <title>RV Studio</title>
 
 </head>
 <body>
