dev code pushed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta property="og:title" content="RV Studio – Freelance Photographer">
   <meta property="og:description" content="Professional and creative photography services to capture your special moments.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gunatitsolutions.github.io/RvStudio/">
+  <meta property="og:url" content="https://gunatitsolutions.github.io/Rvstudio/">
 
   <title>RV Studio</title>
 
